# Snake_game

./: CMakeLists.txt  Makefile  README.md  brickgame_cli  snake_cli  tetris_cli
brickgame/snake/: snake_api.cpp  snake_fsm.cpp  snake_game.cpp
brickgame/tetris/: backend.c  fsm.c  game.c
gui/cli/: app_controller.c  input.c  main.c  render.c
gui/desktop/: gamecontroller.cpp  gameoverdialog.cpp  gameselectiondialog.cpp  gamewidget.cpp  inputhandler.cpp  libraryloader.cpp  main.cpp  mainwindow.cpp  timermanager.cpp
include/brickgame/common/: game_constants.h  types.h
include/brickgame/snake/: snake_api.h  snake_fsm.hpp  snake_game.hpp
include/brickgame/tetris/: backend.h  fsm.h  game.h
include/gui/cli/: app_controller.h  input.h  render.h
include/gui/desktop/: gamecontroller.h  gameoverdialog.h  gameselectiondialog.h  gamewidget.h  inputhandler.h  libraryloader.h  mainwindow.h  timermanager.h
src/brickgame/snake/: snake_api.cpp  snake_fsm.cpp  snake_game.cpp
src/brickgame/tetris/: backend.c  fsm.c  game.c
src/gui/cli/: app_controller.c  input.c  main.c  render.c
src/gui/desktop/: gamecontroller.cpp  gameoverdialog.cpp  gameselectiondialog.cpp  gamewidget.cpp  libraryloader.cpp  main.cpp  mainwindow.cpp
test/test_snake/: test_snake_fsm.cpp  test_snake_game.cpp
test/test_tetris/: test_tetris_fsm.cpp  test_tetris_game.cpp
test_snake/: test_snake_fsm.cpp  test_snake_game.cpp
